// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/ES6/Organism/SliderShell/Stand Alone 3 slides: 1st slide / default 1`] = `
<div
  style={
    Object {
      "marginTop": "50px",
    }
  }
>
  <section
    style={
      Object {
        "height": "450px",
        "width": "100%",
      }
    }
  >
    <section
      className="sc-iyvyFf iPZGjm"
      style={Object {}}
    >
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 1,
              "transition": "opacity 500ms linear",
              "zIndex": 890,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Happy
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Happy Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color355952.svg"
            />
          </section>
        </section>
      </section>
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 0,
              "transition": "opacity 500ms linear",
              "zIndex": 891,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Enjoyable
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Enjoyable Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color515151.svg"
            />
          </section>
        </section>
      </section>
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 0,
              "transition": "opacity 500ms linear",
              "zIndex": 892,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Funny
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Funny Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color373e7a.svg"
            />
          </section>
        </section>
      </section>
    </section>
  </section>
</div>
`;

exports[`Storyshots Component/ES6/Organism/SliderShell/Stand Alone 3 slides: 2nd slide 1`] = `
<div
  style={
    Object {
      "marginTop": "50px",
    }
  }
>
  <section
    style={
      Object {
        "height": "450px",
        "width": "100%",
      }
    }
  >
    <section
      className="sc-iyvyFf iPZGjm"
      style={Object {}}
    >
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 0,
              "transition": "opacity 500ms linear",
              "zIndex": 890,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Happy
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Happy Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color355952.svg"
            />
          </section>
        </section>
      </section>
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 1,
              "transition": "opacity 500ms linear",
              "zIndex": 891,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Enjoyable
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Enjoyable Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color515151.svg"
            />
          </section>
        </section>
      </section>
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 0,
              "transition": "opacity 500ms linear",
              "zIndex": 892,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Funny
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Funny Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color373e7a.svg"
            />
          </section>
        </section>
      </section>
    </section>
  </section>
</div>
`;

exports[`Storyshots Component/ES6/Organism/SliderShell/Stand Alone 3 slides: last slide 1`] = `
<div
  style={
    Object {
      "marginTop": "50px",
    }
  }
>
  <section
    style={
      Object {
        "height": "450px",
        "width": "100%",
      }
    }
  >
    <section
      className="sc-iyvyFf iPZGjm"
      style={Object {}}
    >
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 0,
              "transition": "opacity 500ms linear",
              "zIndex": 890,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Happy
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Happy Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color355952.svg"
            />
          </section>
        </section>
      </section>
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 0,
              "transition": "opacity 500ms linear",
              "zIndex": 891,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Enjoyable
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Enjoyable Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color515151.svg"
            />
          </section>
        </section>
      </section>
      <section
        className="sc-gzOgki joMqgq"
      >
        <section
          className="sc-jwKygS bYqhLd"
          style={
            Object {
              "opacity": 1,
              "transition": "opacity 500ms linear",
              "zIndex": 892,
            }
          }
        >
          <section
            className="sc-lhVmIH kDnGja"
          >
            <span
              className="sc-elJkPf bWTQfH"
            >
              Funny
            </span>
            <span
              className="sc-jtRfpW daOKlg"
            >
              View Our Funny Slide
            </span>
            <span
              className="sc-kTUwUJ hoIETf"
            >
              we got this beautiful slide that is crazy good, please try it out yourself when you have time!
            </span>
            <section
              className="sc-btzYZH ikpJUI"
            >
              <button>
                my custom button 1
              </button>
            </section>
          </section>
          <section
            className="sc-dqBHgY gEqyXK"
          >
            <img
              alt="slide-background"
              className="sc-bYSBpT gKgkXo"
              src="./placeholder/images/1040x700color373e7a.svg"
            />
          </section>
        </section>
      </section>
    </section>
  </section>
</div>
`;

exports[`Storyshots Component/ES6/Organism/SliderShell/Stand Alone default 1`] = `
<div
  style={
    Object {
      "marginTop": "50px",
    }
  }
>
  <section
    style={
      Object {
        "height": "450px",
        "width": "100%",
      }
    }
  >
    <section
      className="sc-iyvyFf iPZGjm"
      style={Object {}}
    >
      <section
        className="sc-jwKygS bYqhLd"
        style={null}
      >
        <section
          className="sc-lhVmIH kDnGja"
        >
          <span
            className="sc-elJkPf bWTQfH"
          >
            Enjoyable
          </span>
          <span
            className="sc-jtRfpW daOKlg"
          >
            View Our Beautiful Slide
          </span>
          <span
            className="sc-kTUwUJ hoIETf"
          >
            we got this beautiful slide that is crazy good, please try it out yourself when you have time!
          </span>
          <section
            className="sc-btzYZH ikpJUI"
          >
            <button>
              my custom button
            </button>
          </section>
        </section>
        <section
          className="sc-dqBHgY gEqyXK"
        >
          <img
            alt="slide-background"
            className="sc-bYSBpT gKgkXo"
            src="./placeholder/images/1040x700color515151.svg"
          />
        </section>
      </section>
    </section>
  </section>
</div>
`;
